# raskman

./: LICENSE
cli/: .gitignore  Cargo.toml  README.org  example.json
cli/src/: main.rs  net.rs
cli/src/app/: errors.rs  group.rs  mod.rs  namespace.rs  note.rs  parser.rs  status.rs  tag.rs  task.rs
cli/src/cli/: banner.rs  clap_def.rs  dispatcher.rs  mod.rs
server/: Cargo.toml  Rocket.toml  docker-compose.yml
server/migrations/2022-08-10-001753_users/: up.sql
server/migrations/2022-08-12-002011_users/: up.sql
server/migrations/2022-08-12-002017_task_lists/: down.sql  up.sql
server/src/: lib.rs  main.rs  models.rs  schema.rs
server/src/src/: schema.rs
server/src/task_lists/: mod.rs  models.rs
server/src/users/: mod.rs  model.rs  models.rs
