[package]
name = "rask"
authors = ["Marc Soda Jr   <m@soda.fm> \nChenla Long Jr <longchenlajr@gmail.com"]
description = "Fast, Extensible CLI Task Manager"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = "0.27.0"
clap = "3.2.1"

#authors = ["Marc Soda Jr <m@soda.fm>Chenla Long Jr <longchenlajr@gmail.com"]