[package]
name = "rask-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.1", features = ["serde_json", "postgres"] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0-rc.2", features = ["diesel_postgres_pool"] }
serde = "1.0.140"
sha3 = "0.10.2"
serde_json = "1.0.83"
bcrypt = "0.13.0"
diesel_cli = { version = "1.4.1", default-features = false, features = ["postgres"] }
jwt = "0.16.0"
rust-crypto = "0.2.36"
rustc-serialize = "0.3.24"
